--- a/p3-kie-wb-webapp/pom.xml
+++ b/p3-kie-wb-webapp/pom.xml
@@ -975,7 +975,7 @@
 
           </compileSourcesArtifacts>
           <runTarget>org.kie.workbench.KIEWebapp/KIEWebapp.html</runTarget>
-            <extraJvmArgs>-Xmx2048m -XX:MaxPermSize=256m -Xms1024m -XX:PermSize=128m -Djetty.custom.sys.classes=bitronix;javax.transaction -Dorg.kie.demo=true -Dorg.kie.clean.onstartup=true -Dorg.uberfire.nio.git.ssh.enabled=false</extraJvmArgs>
+            <extraJvmArgs>-Xmx2048m -XX:MaxPermSize=256m -Xms1024m -XX:PermSize=128m -Djetty.custom.sys.classes=bitronix;javax.transaction -Dorg.kie.demo=true -Dorg.kie.clean.onstartup=true -Dorg.uberfire.nio.git.ssh.enabled=false -Dorg.uberfire.ioService.listeners=org.kie.workbench.backend.iolistener.IOServiceListenerImpl</extraJvmArgs>
           <server>org.jboss.errai.cdi.server.gwt.JettyLauncher</server>
           <!-- drools-compiler has dependency on org.eclipse.jdt.core.compiler:ecj:jar:3.5.1:compile, 
           see http://code.google.com/p/google-web-toolkit/issues/detail?id=4479 -->
